# wg-zero-cpp

./: .clang-format  .env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml
apps/: url_cli.cpp
benchmarks/: CMakeLists.txt  url_benchmark.cpp
cmake/: coverage.cmake  dependencies.cmake  seedlibConfig.cmake.in
config/: default.toml  development.toml
examples/: CMakeLists.txt  url_example.cpp
scripts/: doctor.py  install-hooks.sh
src/: url.cpp  url_impl.hpp
src/include/seedlib/: logging.hpp  logging_config.hpp.in  url.hpp
tests/: CMakeLists.txt  url_test.cpp
tests/data/: url_golden.json
